@@ -8,6 +8,8 @@
 	* libseahorse/seahorse-passphrase.glade:
 	* plugins/nautilus/seahorse-pgp-preferences.glade:
 	* src/seahorse-multi-encrypt.glade: HIG fixes
+	* libseahorse/seahorse-default-key-control.c: Fixed problems when 
+	populating the default key control (bug# 156308)
 	
 2004-10-24  Nate Nielsen <nielsen@memberwebs.com>
 	
